# cossacks3-lan-server

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/: Cossacks3LanServer.cpp  Precompiled.hpp  Server.cpp  Server.hpp
